# POISE-Stagger-Overhaul-SKSE-NG

./: CMakeLists.txt  vcpkg.json
cmake/: XSEPlugin.cmake
include/: PCH.h
src/: Loki_PluginTools.cpp  Loki_PluginTools.h  XSEPlugin.cpp  main.cpp
src/NG/: ActorCache.cpp
src/POISE/: PoiseMod.cpp  PoiseMod.h  TrueHUDControl.cpp  TrueHUDControl.h
